fix(observatory): tooltip color fix, table background fix for dark mode

--- a/client/src/ui/base/_themes.scss
+++ b/client/src/ui/base/_themes.scss
@@ -192,6 +192,8 @@
   --observatory-bg-secondary: rgba(255, 255, 255, 1);
   --observatory-color: #000;
   --observatory-color-secondary: rgba(105, 105, 105, 1);
+  --observatory-inverse-color: rgba(255, 255, 255, 1);
+  --observatory-inverse-color-secondary: rgba(179, 179, 179, 1);
   --observatory-accent: rgba(155, 101, 255, 1);
   --observatory-border: rgba(228, 228, 246, 1);
   --observatory-border-accent: rgba(90, 35, 215, 1);
@@ -211,8 +213,6 @@
   --observatory-grade-d-border: #aa480080;
   --observatory-grade-f-bg: #f8dada80;
   --observatory-grade-f-border: #aa000080;
-  --observatory-tooltip-color: rgba(255, 255, 255, 1);
-  --observatory-tooltip-color-secondary: rgba(179, 179, 179, 1);
   --observatory-arrow-down-color: rgba(158, 0, 39, 1);
   --observatory-arrow-up-color: rgba(0, 121, 54, 1);
 
@@ -497,6 +497,8 @@
   --observatory-bg-secondary: rgba(0, 0, 0, 1);
   --observatory-color: #fff;
   --observatory-color-secondary: rgba(249, 249, 251, 1);
+  --observatory-inverse-color: rgb(27, 27, 27);
+  --observatory-inverse-color-secondary: rgba(105, 105, 105, 1);
   --observatory-accent: rgba(163, 136, 255, 1);
   --observatory-border: rgba(105, 105, 105, 1);
   --observatory-border-accent: rgba(163, 136, 255, 1);
@@ -504,8 +506,8 @@
   --observatory-pass-icon-color: rgba(138, 255, 163, 1);
   --observatory-fail-icon-bg: rgba(92, 38, 38, 1);
   --observatory-fail-icon-color: rgba(255, 121, 155, 1);
-  --observatory-table-bg: rgba(0, 0, 0, 1);
-  --observatory-table-header-bg: var(--observatory-bg-secondary);
+  --observatory-table-bg: rgb(27, 27, 27);
+  --observatory-table-header-bg: rgb(27, 27, 27);
   --observatory-grade-a-bg: #2a664380;
   --observatory-grade-a-border: #00ff6a80;
   --observatory-grade-b-bg: #4e5a3580;
